--- a/mytheme/index.hbs
+++ b/mytheme/index.hbs
@@ -164,7 +164,7 @@
             </div>
 
             <h1 class="menu-title">{{ book_title }}</h1>
-            <h4 class="menu-bar"> -- 练武不练功 到头一场空 -- 《赛博英雄传》 </h4>
+            <h4 class="menu-bar"> 保持批判，有所取舍，知行合一, 方见真我 -- 练武不练功 到头一场空 -- 《赛博英雄传》 </h4>
             <div class="right-buttons">
                 {{#if print_enable}}
                     <a href="{{ path_to_root }}print.html" title="Print this book" aria-label="Print this book">
